--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 PORT=3000
 
-URI_MONGO=mongodb://localhost:27017/supermarket
+URI_MONGO=mongodb://localhost:27017/supermarket-2023278
 
 SECRETORPRIVATEKEY=Est03sMyPub1cK3yM1sL0c0$
