--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "proyecto_bimestral",
   "version": "1.0.0",
   "description": "Administrador de supermercado",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
